# class-copilot

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  review_report.md  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-macos-dmg.sh  reset_test_db.sh  test_data.sql  verify-macos-install.sh  windows-smoke.ps1
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: db.rs  lib.rs  logger.rs  main.rs
src-tauri/src/commands/: affair.rs  attendance.rs  backup.rs  cohort.rs  config.rs  exam.rs  homework.rs  mod.rs  stats.rs  student.rs  subject.rs
src-tauri/tests/: integration.rs
src/app/providers/: index.tsx
src/app/router/: index.tsx
src/app/store/: index.ts
src/components/: ErrorBoundary.tsx
src/features/affairs/: AffairsPage.tsx
src/features/attendance/: AttendancePage.tsx
src/features/cohorts/: CohortList.tsx
src/features/dashboard/: Dashboard.tsx
src/features/homework/: HomeworkDetail.tsx  HomeworkList.tsx
src/features/scores/: ScoreManagement.tsx
src/features/settings/: SettingsPage.tsx
src/features/statistics/: StatisticsPage.tsx
src/features/students/: StudentDetail.tsx  (+1 more)
src/hooks/: useKeyboardShortcut.ts  useLocalStorageState.ts  useTheme.ts
src/layouts/: AppLayout.tsx
src/services/: index.ts
src/test/: basic.test.ts  fixes.test.ts  hooks.test.tsx  services.test.ts
src/types/: index.ts
src/utils/: logger.ts
