[package]
name = "class-copilot"
version = "1.0.0"
description = "数字化班级事务管理系统"
authors = ["Class Copilot Team"]
edition = "2021"
default-run = "class-copilot"

[lib]
name = "class_copilot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "test"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
calamine = "0.26"
rust_xlsxwriter = "0.79"
zip = "2"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
thiserror = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
